# cohesive

./: CMakeLists.txt  LICENSE  README.md
cmake/: option.cmake
doc/: primer.tex
solx/: CMakeLists.txt  package.json  solx.js  webpack.config.js
src/: CMakeLists.txt
src/core/: CMakeLists.txt  main.cpp
src/core/module/: CMakeLists.txt
src/core/module/edit/: CMakeLists.txt  edit.cpp
src/core/module/edit/include/: edit.h
src/core/module/edit/test/unittest/: CMakeLists.txt
src/core/module/file/: CMakeLists.txt  file.cpp
src/core/module/file/include/: file.h
src/core/module/file/test/unittest/: CMakeLists.txt
src/core/module/help/: CMakeLists.txt  help.cpp
src/core/module/help/include/: help.h
src/core/module/help/test/unittest/: CMakeLists.txt
src/core/module/navigate/: CMakeLists.txt  navigate.cpp
src/core/module/navigate/include/: navigate.h
src/core/module/navigate/test/unittest/: CMakeLists.txt
src/core/module/run/: CMakeLists.txt  run.cpp
src/core/module/run/include/: run.h
src/core/module/run/test/unittest/: CMakeLists.txt
src/core/module/tools/: CMakeLists.txt  tools.cpp
src/core/module/tools/include/: tools.h
src/core/module/tools/test/unittest/: CMakeLists.txt
src/core/module/view/: CMakeLists.txt  view.cpp
src/core/module/view/include/: view.h
src/core/module/view/test/unittest/: CMakeLists.txt
src/core/module/wallet/: CMakeLists.txt  wallet.cpp
src/core/module/wallet/include/: wallet.h
src/core/module/wallet/test/unittest/: CMakeLists.txt
src/core/module/window/: CMakeLists.txt  window.cpp
src/core/module/window/include/: window.h
src/core/module/window/test/unittest/: CMakeLists.txt
src/core/res/: CMakeLists.txt  sg-res.qmlproject
src/core/res/js/: solx.js
src/core/res/ui/: Splash.qml  main.qml  root.qml  splash.qml
src/core/res/ui/component/: SGCard.qml  SGCombo.qml  SGHr.qml  SGItemDelegate.qml  SGLabel.qml  SGMenu.qml  SGMenuBG.qml  SGMenuBarItem.qml  SGMenuItem.qml  SGMenuLabel.qml  SGSideBar.qml  SGTool.qml  SGWinAction.qml
src/core/res/ui/popup/: SGClusterPopup.qml
src/core/res/ui/section/: SGDocArea.qml  SGExplorer.qml  SGWorkspace.qml
src/core/res/ui/window/: SGMain.qml  SGSplash.qml  Splash.qml
src/core/test/unittest/: CMakeLists.txt  core-test.cpp
